[project]
name = "software-bug-assistant"
version = "0.1.0"
description = "Software bug assistant using ADK"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "google-adk==1.3.0",
    "langchain-community>=0.3.25",
    "python-dotenv==1.1.0",
    "stackapi>=0.3.1",
    "toolbox-core==0.1.0",
]